[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leash"
dynamic = ["version"]
description = 'Control API for the LumenPnP'
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MPLv2"}
keywords = []
authors = [
  { name = "Stephen Hawes", email = "sphawes@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pyserial",
  "opencv-python"
]

[project.urls]
Documentation = "https://github.com/unknown/leash#readme"
Issues = "https://github.com/unknown/leash/issues"
Source = "https://github.com/unknown/leash"

[tool.hatch.version]
path = "src/leash/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pyserial",
  "opencv-python",
  "numpy"
]

[tool.hatch.envs.default.scripts]
leash = "python3 -m src.leash.__init__"
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/leash tests}"

[tool.coverage.run]
source_pkgs = ["leash", "tests"]
branch = true
parallel = true
omit = [
  "src/leash/__about__.py",
]

[tool.coverage.paths]
leash = ["src/leash", "*/leash/src/leash"]
tests = ["tests", "*/leash/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
