[project]
name = "leash"
version = "0.1.0"
description = "Control API for the LumenPnP"
readme = "README.md"
authors = [
    { name = "Stephen Hawes", email = "sphawes@gmail.com" },
]
dependencies = [
    "opencv-python>=4.10.0.84",
    "pyserial>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
